Definitively fixed overflow issues

--- a/frontend/materialize/sass/components/main.scss
+++ b/frontend/materialize/sass/components/main.scss
@@ -22,10 +22,15 @@ html, body, .table-container{
 /* Map and map control styles below */
 #map {
   z-index:2;
-  height:100%;
+  height: calc(100% - 56px) !important;
 	.btn{
 		color:white !important;
 	}
+}
+@media #{$medium-and-up}{
+  #map{
+    height: calc(100% - 64px) !important;  
+  }
 }
 #map-container{
   .map-start-btn{
@@ -129,11 +134,9 @@ span.twitter-typeahead{
   -webkit-transform-style: preserve-3d;
   -moz-transform-style: preserve-3d;
   transform-style: preserve-3d;  
-  height: calc(100% - $navbar-height-mobile);
+  /* Where's this 1% of overflow coming from????? */
 }
-@media #{$medium-and-up}{
-  height: calc(100% - $navbar-height);
-}
+
 /*
  * Maximum height of container must be 
  * 100% - (height of navbar)
@@ -273,7 +276,7 @@ span.twitter-typeahead{
 /// TOGGLE SWITCHING FOR ROUTE SETUP//////////////////////////////////////////////////////////////////////////
 
 .routeSel {
-  height:100%;
+  height: calc(100% - 56px) !important;
   z-index: 2;
   /* So it sits tightly under the navbar */
   display: block;
@@ -290,6 +293,11 @@ span.twitter-typeahead{
     height:100%;
     width:100%;
     }
+  }
+}
+@media #{$medium-and-up}{
+  .routeSel{
+    height: calc(100% - 64px) !important;  
   }
 }
 .current {
@@ -403,8 +411,8 @@ span.twitter-typeahead{
 
 .distContainer {
   height:100%;
-  position:relative;
-  margin:20% 0 50% 0;
+  position: relative;
+  padding: 20% 0 50% 0;
 }
 
 /// BUTTTON STYLES /////////////////////////////////////////////////////////
